# whisper-node

./: .gitignore  .gitmodules  Cargo.toml  build.rs  index.d.ts  index.js  package.json  pnpm-lock.yaml  simple-test.mjs  tsconfig.json  whisper.wasi-browser.js  whisper.wasi.cjs
.cargo/: config.toml
.github/workflows/: CI.yml  lint.yml
__test__/: index.spec.ts
build_dav1d/: Cargo.toml
build_dav1d/src/: main.rs
scripts/: download-ggml-model.js  get-rocm.mts
src/: audio_decode.rs  context_params.rs  full_params.rs  lib.rs  state.rs  sys.rs  video.rs
