[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "napi-whisper"
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.0.0-alpha" }
napi-derive = { version = "3.0.0-alpha" }

[build-dependencies]
cmake  = "0.1"
napi-build = "2"

[features]
rocm = []

[profile.release]
lto = true
codegen-units = 1
