[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "napi-whisper"
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[workspace]
default-members = ["."]
members = [
  ".",
  "build_dav1d"
]

[dependencies]
anyhow = "1"
ffmpeg-next = { version = "7.1.0", features = ["build", "static", "build-lib-dav1d"] }
napi = { version = "3.0.0-alpha.19", default-features = false, features = [
  "anyhow",
  "napi9",
  "experimental",
] }
napi-derive = { version = "3.0.0-alpha.17", default-features = false, features = [
  "type-def",
  "strict",
] }
rubato = "0.16"
symphonia = { version = "0.5", features = ["all", "opt-simd"] }

[target.'cfg(all(target_os = "macos", target_arch = "x86_64"))'.dependencies]
symphonia = { version = "0.5", features = ["all"] }

[target.'cfg(not(all(target_os = "macos", target_arch = "x86_64")))'.dependencies]
symphonia = { version = "0.5", features = ["all", "opt-simd"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
mimalloc = "0.1"
[target.'cfg(all(target_os = "linux", not(target_arch = "arm")))'.dependencies]
mimalloc = { version = "0.1", features = ["local_dynamic_tls"] }

[build-dependencies]
cmake = "0.1"
napi-build = "2"

[features]
rocm = []

[profile.release]
lto = true
codegen-units = 1
